<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/blue_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15sp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:src="@drawable/eshop_logo"/>

        <TextView
            android:id="@+id/login_heading"
            style="@style/Heading"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="40sp"
            android:text="@string/create_account"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            style="@style/TextInputLayout"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            app:startIconDrawable="@drawable/baseline_person_24" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputET" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_email_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            style="@style/TextInputLayout"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            app:startIconDrawable="@drawable/baseline_email_24" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email_et"
                style="@style/TextInputET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_pw_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_enter_password"
            style="@style/TextInputLayout"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            app:startIconDrawable="@drawable/baseline_vpn_key_24"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_pw_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/TextInputET" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_pw_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            style="@style/TextInputLayout"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            app:startIconDrawable="@drawable/baseline_vpn_key_24"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_pw_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/TextInputET" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30px"
            style="@style/Button_Primary"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="20sp"
            android:text="@string/register_account"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textAlignment="center"
            android:text="@string/i_have_account"
            style="@style/body"/>

    </LinearLayout>

</LinearLayout>